Fix building transition jumps

--- a/gatsby-personal-website/src/styles/slider.css
+++ b/gatsby-personal-website/src/styles/slider.css
@@ -1,73 +1,73 @@
 .switcher-wrap {
-    position: relative;
-    top: 1vh;
-    width: 11.5vw;
-    height: 5vw;
-    border-radius: 3vw;
-    left: 87.5vw;
-    z-index: 3;
+  position: relative;
+  top: 1vh;
+  width: 11.5vw;
+  height: 5vw;
+  border-radius: 3vw;
+  left: 87.5vw;
+  z-index: 3;
 }
 
 .wrap-sun {
-    background-color: #9cd6d6;
-    border: 0.2vw solid #8ebfbf;
+  background-color: #9cd6d6;
+  border: 0.2vw solid #8ebfbf;
 }
 
 .wrap-moon {
-    background-color: #3C4145;
-    border: 0.2vw solid #1C1C1C;
+  background-color: #3c4145;
+  border: 0.2vw solid #1c1c1c;
 }
 
 .sun-moon {
-    position: absolute;
-    left: 0.05vw;
-    top: 0.05vw;
-    width: 4.5vw;
-    height: 4.5vw;
-    border-radius: 50%;
-    transition: .3s cubic-bezier(.68,.45,.44,.73);
-    cursor: pointer;
+  position: absolute;
+  left: 0.05vw;
+  top: 0.05vw;
+  width: 4.5vw;
+  height: 4.5vw;
+  border-radius: 50%;
+  transition: 0.3s cubic-bezier(0.68, 0.45, 0.44, 0.73);
+  cursor: pointer;
 }
 
 .moon {
-    background-color: #FFFFFF;
-    border: 0.2vw solid #E3E8C6;
-    position: relative;
-    animation: transformation .3s ease-in-out;
-    left: 6.5vw;
+  background-color: #ffffff;
+  border: 0.2vw solid #e3e8c6;
+  position: relative;
+  animation: transformation 0.3s ease-in-out;
+  left: 6.5vw;
 }
 
 .moon:before {
-    content: '';
-    width: 1vw;
-    height: 1vw;
-    top: 3vw;
-    left: 1.25vw;
-    border: 0.25vw solid #E3E8C6;
-    position: absolute;
-    border-radius: 50%;
-    background-color: #fff;
-    box-sizing: border-box;
-    transition: .3s ease-in-out;
+  content: "";
+  width: 1vw;
+  height: 1vw;
+  top: 3vw;
+  left: 1.25vw;
+  border: 0.25vw solid #e3e8c6;
+  position: absolute;
+  border-radius: 50%;
+  background-color: #fff;
+  box-sizing: border-box;
+  transition: 0.3s ease-in-out;
 }
 
 .moon:after {
-    content: '';
-    width: 0.5vw;
-    height: 0.5vw;
-    top: 2.75vw;
-    left: 0.75vw;
-    border: 0.3vw solid #E3E8C6;
-    position: absolute;
-    border-radius: 50%;
-    background-color: #fff;
-    box-sizing: border-box;
-    transition: .3s ease-in-out;
+  content: "";
+  width: 0.5vw;
+  height: 0.5vw;
+  top: 2.75vw;
+  left: 0.75vw;
+  border: 0.3vw solid #e3e8c6;
+  position: absolute;
+  border-radius: 50%;
+  background-color: #fff;
+  box-sizing: border-box;
+  transition: 0.3s ease-in-out;
 }
 
 .sun {
-    background-color: #FFE063;
-    border: 0.2vw solid #E2C43A;
-    animation: transformation .3s ease-in-out;
-    left: 0vw;
+  background-color: #ffe063;
+  border: 0.2vw solid #e2c43a;
+  animation: transformation 0.3s ease-in-out;
+  left: 0vw;
 }
